# hello-ai-infra

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: deploy.yml
code/part0-preface/: activate-rocm.sh  pyproject.toml
code/part0-preface/chapter1/: check_torch_rocm.py
code/part1-hardware-rocm/: activate-rocm.sh  pyproject.toml
code/part1-hardware-rocm/chapter3/: benchmark_vector_add.py
code/part1-hardware-rocm/chapter4/: README.md  atomic_cmp.py  bw_footprint.py  bw_triad.hip  lds_stride.hip  run_all.sh
code/part1-hardware-rocm/chapter6/: vector_add.hip
code/part2-profiling/: pyproject.toml
code/part2-profiling/chapter10/: summarize_pmc.py
code/part2-profiling/chapter7/: bench_torch_op.py  bench_triton_copy.py
code/part2-profiling/chapter8/: slow_elementwise_pipeline.py
code/part2-profiling/chapter9/: performance-report.md
code/part3-hip-kernels/chapter11/: error_check.hip  hello_hip.hip  run_all.sh  vector_add_minimal.hip
code/part3-hip-kernels/chapter12/: bench_vector_add.py  cpu_baseline.cpp  run.sh  run_all.sh  vector_add.hip
code/part3-hip-kernels/chapter13/: bench_reduction.py  reduction.hip  run_all.sh
code/part3-hip-kernels/chapter14/: bench_softmax.py  run.sh  run_all.sh  softmax.hip  verify_vs_torch.py
code/part3-hip-kernels/chapter15/: bench_layernorm.py  bench_torch_layernorm.py  layernorm.hip  run_all.sh  verify_vs_torch.py
docs/: index.md
docs/.vitepress/: config.mjs  config.mts  markdown-figures.mjs  outline.mjs  sync-outline.mjs
scripts/: bootstrap-rocm-env.sh  png-to-webp.mjs  rocm-uv-env.sh
(+171 files in other folders)
